--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 							My journey in web development began [mention the starting point, whether it's through education, personal projects, etc.].
 							Over the years, I have honed my skills in both front-end and back-end technologies, allowing me to build comprehensive and responsive web solutions.
 						</p>
-						<a class="primary_btn" href='pdf/harshal.pdf' download><span>Download CV</span></a>
+						<a class="primary_btn" href='pdf/harshal Resume.pdf' download><span>Download CV</span></a>
 					</div>
 				</div>
 			</div>
